--- a/app/styles/components/wizard-step.styl
+++ b/app/styles/components/wizard-step.styl
@@ -10,6 +10,8 @@ Created on 15/04/2015 by PhpStorm
 .wizard
 	&-step
 		&s
+			&.is-floating
+				float left
 			display block
 			&-breadcrumb
 				&s
